--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -6,8 +6,20 @@
     <link rel="stylesheet" href="webjars/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/index">Tienda</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="/">Pagina Principal<span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="/cart">Carrito de compras</a>
+                <a class="nav-item nav-link" href="/compras">Compras</a>
+            </div>
+        </div>
+    </nav>
     <div class="container">
-
         <div class="jumbotron">
             <h1 class="display-4">Tienda en línea</h1>
         </div>
