Added purchases page and modified styles in index and cart pages

--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -20,8 +20,8 @@
         </div>
     </nav>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">Tienda en línea</h1>
+        <div class="jumbotron bg-primary">
+            <h1 class="display-4 text-white">Tienda en línea</h1>
         </div>
         <table class="table">
             <thead>
