--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -20,8 +20,8 @@
         </div>
     </nav>
     <div class="container">
-        <div class="jumbotron">
-            <h1 class="display-4">Carrito de Compras</h1>
+        <div class="jumbotron bg-secondary">
+            <h1 class="display-4 text-white">Carrito de Compras</h1>
         </div>
         <div th:if="${!cartItems.isEmpty()}">
             <table class="table">
